--- a/package.json
+++ b/package.json
@@ -20,10 +20,13 @@
   },
   "homepage": "https://github.com/shaharsol/cryptoapp#readme",
   "dependencies": {
+    "ejs": "^3.1.9",
     "express": "^4.18.3"
   },
   "devDependencies": {
+    "@types/ejs": "^3.1.5",
     "@types/express": "^4.17.21",
+    "@types/node": "^20.11.24",
     "ts-node": "^10.9.2"
   }
 }
