--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon --exec ts-node src/app.ts",
+    "start": "ts-node src/initdb.ts && nodemon --exec ts-node src/app.ts",
     "build": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -21,7 +21,8 @@
   "homepage": "https://github.com/shaharsol/cryptoapp#readme",
   "dependencies": {
     "ejs": "^3.1.9",
-    "express": "^4.18.3"
+    "express": "^4.18.3",
+    "mysql2": "^3.9.2"
   },
   "devDependencies": {
     "@types/ejs": "^3.1.5",
