--- a/package.json
+++ b/package.json
@@ -20,11 +20,13 @@
   },
   "homepage": "https://github.com/shaharsol/cryptoapp#readme",
   "dependencies": {
+    "config": "^3.3.11",
     "ejs": "^3.1.9",
     "express": "^4.18.3",
     "mysql2": "^3.9.2"
   },
   "devDependencies": {
+    "@types/config": "^3.3.3",
     "@types/ejs": "^3.1.5",
     "@types/express": "^4.17.21",
     "@types/node": "^20.11.24",
