--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "start": "ts-node src/initdb.ts && nodemon --exec ts-node src/app.ts",
     "build": "tsc",
+    "worker": "ts-node src/worker",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -20,6 +21,8 @@
   },
   "homepage": "https://github.com/shaharsol/cryptoapp#readme",
   "dependencies": {
+    "axios": "^1.6.7",
+    "cheerio": "^1.0.0-rc.12",
     "config": "^3.3.11",
     "ejs": "^3.1.9",
     "express": "^4.18.3",
@@ -27,6 +30,8 @@
     "mysql2": "^3.9.2"
   },
   "devDependencies": {
+    "@types/axios": "^0.14.0",
+    "@types/cheerio": "^0.22.35",
     "@types/config": "^3.3.3",
     "@types/ejs": "^3.1.5",
     "@types/express": "^4.17.21",
