--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "config": "^3.3.11",
     "ejs": "^3.1.9",
     "express": "^4.18.3",
+    "http-errors": "^2.0.0",
+    "joi": "^17.12.2",
     "mongoose": "^8.2.1",
     "mysql2": "^3.9.2"
   },
@@ -35,6 +37,8 @@
     "@types/config": "^3.3.3",
     "@types/ejs": "^3.1.5",
     "@types/express": "^4.17.21",
+    "@types/http-errors": "^2.0.4",
+    "@types/joi": "^17.2.3",
     "@types/mongoose": "^5.11.97",
     "@types/node": "^20.11.24",
     "ts-node": "^10.9.2"
