--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start": "ts-node src/initdb.ts && nodemon --exec ts-node src/app.ts",
     "build": "tsc",
     "worker": "ts-node src/worker",
+    "io": "ts-node src/io",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -29,7 +30,9 @@
     "http-errors": "^2.0.0",
     "joi": "^17.12.2",
     "mongoose": "^8.2.1",
-    "mysql2": "^3.9.2"
+    "mysql2": "^3.9.2",
+    "socket.io": "^4.7.4",
+    "socket.io-client": "^4.7.4"
   },
   "devDependencies": {
     "@types/axios": "^0.14.0",
@@ -41,6 +44,8 @@
     "@types/joi": "^17.2.3",
     "@types/mongoose": "^5.11.97",
     "@types/node": "^20.11.24",
+    "@types/socket.io": "^3.0.2",
+    "@types/socket.io-client": "^3.0.0",
     "ts-node": "^10.9.2"
   }
 }
