--- a/package.json
+++ b/package.json
@@ -27,10 +27,13 @@
     "config": "^3.3.11",
     "ejs": "^3.1.9",
     "express": "^4.18.3",
+    "express-session": "^1.18.0",
     "http-errors": "^2.0.0",
     "joi": "^17.12.2",
     "mongoose": "^8.2.1",
     "mysql2": "^3.9.2",
+    "passport": "^0.7.0",
+    "passport-github2": "^0.1.12",
     "socket.io": "^4.7.4",
     "socket.io-client": "^4.7.4"
   },
@@ -40,10 +43,13 @@
     "@types/config": "^3.3.3",
     "@types/ejs": "^3.1.5",
     "@types/express": "^4.17.21",
+    "@types/express-session": "^1.18.0",
     "@types/http-errors": "^2.0.4",
     "@types/joi": "^17.2.3",
     "@types/mongoose": "^5.11.97",
     "@types/node": "^20.11.24",
+    "@types/passport": "^1.0.16",
+    "@types/passport-github2": "^1.2.9",
     "@types/socket.io": "^3.0.2",
     "@types/socket.io-client": "^3.0.0",
     "ts-node": "^10.9.2"
