--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "ts-node src/initdb.ts && nodemon --exec ts-node src/app.ts",
     "build": "tsc",
     "worker": "ts-node src/worker",
-    "io": "ts-node src/io",
+    "io:dev": "ts-node src/io",
+    "io": "node ./dist/io",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
