--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "ts-node src/initdb.ts && nodemon --exec ts-node src/app.ts",
     "build": "tsc",
-    "worker": "ts-node src/worker",
+    "worker:dev": "ts-node src/worker",
+    "worker": "node ./dist/worker",
     "io:dev": "ts-node src/io",
     "io": "node ./dist/io",
     "test": "echo \"Error: no test specified\" && exit 1"
