--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "ts-node src/initdb.ts && nodemon --exec ts-node src/app.ts",
-    "build": "tsc",
+    "start:dev": "ts-node src/initdb.ts && nodemon --exec ts-node src/app.ts",
+    "start": "node ./dist/initdb && node ./dist/app",
+    "build": "tsc && cp -r ./config ./dist/config && cp -r ./src/views ./dist/views",
     "worker:dev": "ts-node src/worker",
     "worker": "node ./dist/worker",
     "io:dev": "ts-node src/io",
