--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start:dev": "nodemon --exec ts-node src/api.ts",
+    "start:dev": "ts-node src/initdb.ts && nodemon --exec ts-node src/app.ts",
     "start": "node ./dist/initdb && node ./dist/app",
     "build": "tsc && cp -r ./config ./dist/config && cp -r ./src/views ./dist/views",
     "worker:dev": "ts-node src/worker",
